--- a/assign1.html
+++ b/assign1.html
@@ -784,7 +784,7 @@ hljs.initHighlightingOnLoad();
   <div class="slides">
 
 <section data-state="section" data-transition="linear" data-transition-speed="default">
-<h1>Varaint Sampling Demonstrate</h1><p>Pattarapong Ingsakulrunraung</p>
+<h1>Varaint Sampling Demonstrate</h1><p>Pattarapong Ingsakulrunraung<br/>22 June 2015</p>
 
 <div class="slideContent" >
 
@@ -856,7 +856,7 @@ Data &lt;- observe({
 <pre><code class="r">sample(c(&quot;a&quot;,&quot;b&quot;), 10,prob=c(0.7,0.3),replace=TRUE)
 </code></pre>
 
-<pre><code> [1] &quot;b&quot; &quot;a&quot; &quot;b&quot; &quot;b&quot; &quot;b&quot; &quot;b&quot; &quot;a&quot; &quot;b&quot; &quot;a&quot; &quot;b&quot;
+<pre><code> [1] &quot;a&quot; &quot;a&quot; &quot;a&quot; &quot;a&quot; &quot;a&quot; &quot;a&quot; &quot;a&quot; &quot;a&quot; &quot;b&quot; &quot;a&quot;
 </code></pre>
 
 <ul>
